--- a/roles/elrepo/defaults/main.yml
+++ b/roles/elrepo/defaults/main.yml
@@ -1,10 +1,8 @@
 ---
 elrepo_kernel: false
-elrepo_kernel_absent:
-  - kernel-devel
-  - kernel-headers
-  - kernel-tools
-  - kernel-tools-libs
+elrepo_kernel_absent: false
+elrepo_kernel_default: false
+elrepo_kernel_reboot: false
 elrepo_kernel_version: ml
 elrepo_packages: []
 elrepo_releasever: "{{ ansible_distribution_major_version }}"
