[Change] Add support for protected.d in dnf role

--- a/roles/dnf/defaults/main.yml
+++ b/roles/dnf/defaults/main.yml
@@ -7,6 +7,7 @@ dnf_enablerepo: []
 dnf_gpgcheck: true
 dnf_installonly_limit: 3
 dnf_present: []
+dnf_protected_d: []
 dnf_skip_if_unavailable: false
 dnf_update: false
 dnf_update_cache: false
