[Addition] Initial commit of device_info role [Change] Add device_info dependency to mount role

--- a/roles/mount/meta/main.yml
+++ b/roles/mount/meta/main.yml
@@ -1,5 +1,6 @@
 ---
-dependencies: []
+dependencies:
+  - { role: linuxhq.linux.device_info, tags: mount }
 galaxy_info:
   role_name: mount
   author: Taylor Kimball
