[Change] Add support for passwd/nopasswd for root/%wheel

--- a/roles/sudo/defaults/main.yml
+++ b/roles/sudo/defaults/main.yml
@@ -9,6 +9,8 @@ sudoers_env_reset: true
 sudoers_d: []
 sudoers_includedir: /etc/sudoers.d
 sudoers_match_group_by_gid: true
+sudoers_nopasswd_root: false
+sudoers_nopasswd_wheel: false
 sudoers_requiretty: false
 sudoers_visiblepw: false
 ...
