--- a/roles/directory/meta/main.yml
+++ b/roles/directory/meta/main.yml
@@ -7,10 +7,7 @@ galaxy_info:
   license: GPLv3
   min_ansible_version: 2.15.0
   platforms:
-    - name: Debian
-      versions:
-        - all
-    - name: EL
+    - name: GenericLinux
       versions:
         - all
   galaxy_tags:
