[Change] Update galaxy version to v1.7.2

--- a/roles/dnf_versionlock/tasks/main.yml
+++ b/roles/dnf_versionlock/tasks/main.yml
@@ -23,7 +23,7 @@
     - dnf_versionlock
   become: true
   ansible.builtin.template:
-    dest: /etc/dnf/plugins/versionlock.list
+    dest: "{{ dnf_versionlock_locklist }}"
     group: root
     mode: '0644'
     owner: root
