--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Ensure ansible-lint-action is present
-        uses: ansible/ansible-lint@main
+        uses: ansible/ansible-lint-action@v6
 
   yamllint:
     name: yamllint
@@ -26,7 +26,7 @@ jobs:
       - name: Ensure python3 is present
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: '3.9'
 
       - name: Ensure yamllint is present
         run: pip install yamllint
