--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ jmespath==1.0.1
 netaddr==1.3.0
 molecule==25.1.0
 molecule-plugins==23.7.0
+python-vagrant==1.0.0
 requests<2.29
 urllib3<2
 yamllint==1.35.1
