--- a/roles/openssh_server/meta/main.yml
+++ b/roles/openssh_server/meta/main.yml
@@ -6,13 +6,14 @@ galaxy_info:
   description: OpenSSH SSH daemon
   license: GPLv3
   min_ansible_version: 2.15.0
+  namespace: linuxhq
   platforms:
     - name: EL
       versions:
         - all
   galaxy_tags:
-    - openssh
     - linux
+    - openssh
     - server
     - ssh
 ...
