--- a/roles/openssh_client/meta/main.yml
+++ b/roles/openssh_client/meta/main.yml
@@ -6,13 +6,14 @@ galaxy_info:
   description: OpenSSH SSH client
   license: GPLv3
   min_ansible_version: 2.15.0
+  namespace: linuxhq
   platforms:
     - name: EL
       versions:
         - all
   galaxy_tags:
     - client
-    - openssh
     - linux
+    - openssh
     - ssh
 ...
