[Change] Fix truthy linting issue

--- a/roles/openssh_client/molecule/default/converge.yml
+++ b/roles/openssh_client/molecule/default/converge.yml
@@ -6,34 +6,34 @@
       openssh_client_parameters:
         AddressFamily: inet
         Ciphers: aes128-ctr,aes192-ctr,aes256-ctr
-        ForwardAgent: no
-        ForwardX11: no
-        HashKnownHosts: yes
+        ForwardAgent: false
+        ForwardX11: false
+        HashKnownHosts: true
         LogLevel: ERROR
         MACs: hmac-sha2-256,hmac-sha2-512
-        StrictHostKeyChecking: no
+        StrictHostKeyChecking: false
         UserKnownHostsFile: /dev/null
 
     - role: openssh_client
       openssh_client_parameters:
         AddressFamily: inet
         Ciphers: aes128-ctr,aes192-ctr,aes256-ctr
-        ForwardAgent: no
-        ForwardX11: no
-        HashKnownHosts: yes
+        ForwardAgent: false
+        ForwardX11: false
+        HashKnownHosts: true
         LogLevel: ERROR
         MACs: hmac-sha2-256,hmac-sha2-512
-        StrictHostKeyChecking: no
+        StrictHostKeyChecking: false
         UserKnownHostsFile: /dev/null
       openssh_client_parameters_d:
         - name: linuxhq-net.conf
           host: linuxhq.net
           parameters:
-            HashKnownHosts: no
+            HashKnownHosts: false
             LogLevel: QUIET
         - name: linuxhq-org.conf
           host: linuxhq.org
           parameters:
-            ForwardAgent: yes
-            ForwardX11: yes
+            ForwardAgent: true
+            ForwardX11: true
 ...
