--- a/roles/chrony/meta/main.yml
+++ b/roles/chrony/meta/main.yml
@@ -6,6 +6,7 @@ galaxy_info:
   description: Programs for keeping computer clocks accurate
   license: GPLv3
   min_ansible_version: 2.15.0
+  namespace: linuxhq
   platforms:
     - name: EL
       versions:
